--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "ext-pdo": "*",
         "ext-json": "*",
         "spipu/html2pdf": "^5.2",
-        "guzzlehttp/psr7": "^2.1"
+        "guzzlehttp/psr7": "^2.1",
+        "phpmailer/phpmailer": "^6.5",
+        "vlucas/phpdotenv": "^5.3"
     }
 }
